[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight-ratelimit-django"
version = "1.0.4"
description = "Lightweight rate limiting for Django."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Vazgen Ayvazyan", email = "a.wasgen@gmail.com" }
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["lightweight_ratelimit_django", "lightweight_ratelimit_django.rate_limiter", "lightweight_ratelimit_django.rate_limiter.utils"]